<resources>
    <string name="app_name">WM- work manager</string>
    <string name="add_costumer">+</string>
    <string name="menu">תפריט</string>
    <string name="btn1">לקוח 1</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="login_manager">הכנס כמנהל</string>
    <string name="login_normal">כניסה רגילה</string>
    <string name="username">שם משתמש</string>
    <string name="password">סיסמא</string>
    <string name="login">התחבר</string>
    <string name="btnEdit">ערוך</string>
    <string name="saveEditCostumer">שמור שינויים</string>
    <string name="name">שם:</string>
    <string name="adress">כתובת:</string>
    <string name="phone">טלפון:</string>
    <string name="mail">מייל:</string>
    <string name="caseNum">מספר תיק:</string>
    <string name="caseNumDeductions">מספר תיק ניכויים:</string>
    <string name="incomeTax">מס הכנסה:</string>
    <string name="insurance">ביטוח לאומי:</string>
    <string name="VAT">מע"מ:</string>
    <string name="addNewCostumer">הוסף</string>
    <string name="sendToMail">שלח למייל שלי</string>
    <string name="workStatus">סטטוס עבודה</string>
    <string name="makeReminder">קבע תזכורת</string>
    <string name="sendReminder">שלח תזכורת</string>
    <string name="options">אפשרויות</string>
    <string name="costumer">לקוח:</string>
    <string name="reminder">תזכורת:</string>
    <string name="date">תאריך</string>
    <string name="time">שעה</string>
    <string name="signIn">הרשם!</string>
    <string name="signin">Sign In</string>
    <string name="code">קוד</string>
    <string name="managerPricing">תעריף מנהל</string>
    <string name="workerPricing">תעריף עובד</string>
    <string name="field1">שדה 1:</string>
    <string name="field2">שדה 2:</string>
    <string name="field3">שדה 3:</string>
    <string name="field4">שדה 4:</string>
    <string name="field5">שדה 5:</string>
    <string name="field6">שדה 6:</string>
    <string name="sendReminderSMS">שלח תזכורת בSMS</string>
    <string name="sendReminderMail">שלח תזכורת במייל</string>
    <string name="logout">התנתק</string>




</resources>
