<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="liran.com.wm_workmanager.MenuActivity">


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/btn_menu_btns_style"
        android:text="@string/workStatus"
        android:id="@+id/btn_work_status"
        />

    <Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    style="@style/btn_menu_btns_style"
    android:text="@string/makeReminder"
    android:id="@+id/btn_make_reminder"
    android:layout_below="@+id/btn_work_status"
    />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/btn_menu_btns_style"
        android:text="@string/sendReminder"
        android:id="@+id/btn_send_reminder"
        android:layout_below="@+id/btn_make_reminder"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/btn_menu_btns_style"
        android:text="@string/options"
        android:id="@+id/btn_options"
        android:layout_below="@+id/btn_send_reminder"
        />
</RelativeLayout>
