<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="liran.com.wm_workmanager.MakeReminderActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtCostumer"
                android:text="@string/costumer" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_costumer"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@color/whiteVeryOpacity" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminder"
                android:id="@+id/txtreminder" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="69dp"
                android:id="@+id/editTxtReminderMessage"
                android:inputType="textMultiLine"
                android:background="@color/whiteVeryOpacity" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:id="@+id/btn_date"
                android:layout_marginTop="15dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:id="@+id/btn_time" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/makeReminder"
                android:id="@+id/btn_save_reminder"
                android:layout_marginBottom="0dp"
                android:layout_alignBottom="@+id/scrollView2"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                style="@style/btn_edit_style" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
