<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"   android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/blurwide">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="72dp"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/btn_login_style"
            android:text="@string/login_manager"
            android:id="@+id/btn_login_manager"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/btn_login_style"
            android:text="@string/login_normal"
            android:id="@+id/btn_login_normal"
            android:layout_below="@+id/btn_login_manager"
            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/btn_login_style"
            android:text="@string/signIn"
            android:id="@+id/btn_sign_in"
            android:layout_below="@+id/btn_login_normal"
            />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@mipmap/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:baselineAlignBottom="true" />

</RelativeLayout>
